<resources>
    <string name="app_name">Antrian Sehat</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="no_more_list">no more list</string>
    <string name="address_item_name">Klampis, Sinarmas jaya</string>
    <string name="nama_puskesmas">Puskesmas A</string>
    <string name="nama_poli">Poli A</string>
    <string name="nomor_antrian">11</string>
    <string name="antrian_saat_ini">Antrian Saat Ini :</string>
    <string name="pilih_pendaftar">Pilih Pendaftar</string>
    <string name="tvHistoryTitle">History</string>
    <string name="txt_hari_ini">Hari ini</string>
    <string name="tv_akan_datang">Akan Datang</string>
    <string name="tv_selesai">Selesai</string>
    <string name="no_antrian_label">No. Antrian:</string>
    <string name="saat_ini_label">saat ini:   </string>
    <string name="artikel_kesehatan_label">Tahukah Anda?</string>
    <string name="waiting_list_label">Antrian Terdekat Anda:</string>
    <string name="order_number_label">No. Antrian: </string>
    <string name="slash">/</string>
    <string name="current_waiting_list_label">Saat ini: </string>
    <string name="create_waiting_list_bt_label">Daftar Antrian</string>
    <string name="list_poly_bt_label">Daftar Poliklinik</string>
    <string name="list_HA_bt_label">Daftar Puskesmas</string>
    <string name="show_ticket_bt_label">Show Ticket</string>
    <string name="tvPuskesmasTitle">Daftar Puskesmas</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Jane</string>
    <string name="total_antrian">x mengantri</string>
    <string name="kerabat_terdaftar_text_view">Kerabat yang Pernah Anda Daftarkan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="error_message">error message</string>
    <string name="nomer_antrian_label">No. Antrian </string>
    <string name="kartu_antrian_label">Kartu Antrian</string>
  
    <!--Schedule-->
    <string name="cari_puskesmas">Cari Puskesmas</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="dateLabel">Date : </string>
    <string name="date">Tue, 23 Feb 2017</string>
    <string name="daftar_antrian_label">Daftar Antrian</string>
    <string name="titleArticleLabel">judul artikel</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="entry_nama">Masukkan Nama</string>
    <string name="entry_email">Masukkan Email</string>
    <string name="entry_nik">Masukkan NIK</string>
    <string name="simpan">Simpan</string>
    <string name="selesai">Selesai</string>
    <string name="list_poliklinik">List Poliklinik</string>
    <string name="list_puskesmas">List Puskesmas</string>
    <string name="back_button">backButton</string>
    <string name="no_ticket_label">Belum ada tiket untuk ditampilkan</string>
    <string name="selesai_label">Selesai</string>
    <string name="hari_ini_label">Hari Ini</string>
    <string name="akan_datang_label">Akan Datang</string>
    <string name="about_us_label">About Us</string>
    <string name="bella_label">Sabillah Ferdiana Febrianti</string>
    <string name="iim_label">Rochimatus Sa\'diyah</string>
    <string name="yanu_label">Yanu Adi Nugraha</string>
    <string name="refano_label">Refano Pradana Y.</string>
    <string name="developer_team_label">Developer Team</string>
    <string name="ghozy_label">M. Ghozy Al Ghifary</string>
    <string name="aji_label">M. Satriyo Aji</string>
    <string name="sponsored_by_label">Sponsored By</string>
    <string name="supported_by_label">Supported By</string>
    <string name="supervisors_and_mentors_label">Supervisors and Mentors</string>
    <string name="umi_sa_adah">Umi Sa\'adah</string>
    <string name="desy_intan_permatasari">Desy Intan Permatasari</string>
    <string name="andhik_ampuh_yunanto">Andhik Ampuh Yunanto</string>
    <string name="maulidan_bagus_afridian_rasyid">Maulidan Bagus Afridian Rasyid</string>
    <string name="willy_achmat_fauzi">Willy Achmat Fauzi</string>
    <string name="verent_flourencia_irene">Verent Flourencia Irene</string>
    <string name="mayshella_ainun_wakhidah">Mayshella Ainun Wakhidah</string>
    <string name="andika_ahmad_ramadhan">Andika Ahmad Ramadhan</string>
    <string name="fandi_ahmad">Fandi Ahmad</string>
    <string name="ardian_kristya_pratama">Ardian Kristya Pratama</string>
    <string name="angga_pradipta_kurnia_putra">Angga Pradipta Kurnia Putra</string>
    <string name="muhammad_alif_pradipta_adp">Muhammad Alif Pradipta ADP</string>
    <string name="rafly_arief_kanza">Rafly Arief Kanza</string>
    <string name="ahmad_jarir_at_thobari">Ahmad Jarir At Thobari</string>
    <string name="ajie_dibyo_respati">Ajie Dibyo Respati</string>
    <string name="achmad_zulkarnain">Achmad Zulkarnain</string>
    <string name="arie_affianto">Arie Affianto</string>
    <string name="tegar_imansyah">Tegar Imansyah</string>
    <string name="with_love_label">With ❤ Antrian Sehat</string>
    <string name="edit_profile_label">Edit Profile</string>

    <!--Spinner-->
    <string-array name="pilihan_register">
        <item>Pilih Pendaftar</item>
        <item>Diri Sendiri</item>
        <item>Orang Lain</item>
    </string-array>

</resources>
